--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>play with Dog</h2>
-    <button onclick="loadDog()" class="btn btn-primary">Load the dog</button>
+    <div class="main-container w-100 m-auto">
+       <div class="row w-100 m-auto text-center">
+        <div class="col-md-6 col-sm-6">
+            <h1>left side</h1>
+            <div class="input-group mb-3">
+                <input id="search-box" type="text" class="form-control" placeholder="search" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button onclick="allPlayer()" class="btn btn-outline-secondary" type="button" >search</button>
+              </div>
+        </div>
+        <div class="col-md-6 col-sm-6">
+            <h1>Right side</h1>
+        </div>
+       </div>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
