--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="container">
     <div class="main-container w-100 m-auto">
        <div class="row w-100 m-auto text-center">
         <div class="col-md-6 col-sm-6">
@@ -18,9 +18,17 @@
                 <input id="search-box" type="text" class="form-control" placeholder="search" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button onclick="allPlayer()" class="btn btn-outline-secondary" type="button" >search</button>
               </div>
+              <div id="player-container" class="player-container">
+            
+              </div>
         </div>
         <div class="col-md-6 col-sm-6">
             <h1>Right side</h1>
+            <div class="details-container" id="details-container">
+                <img id="female" class="w-75 border rounded-3" src="image/image2.jpeg" alt="">
+                <img id="male" class="w-75 border rounded-3" src="image/images1.jpg" alt="">
+                
+            </div>
         </div>
        </div>
     </div>
